Java 9 documentation fix.